# fastcli

./: .gitignore  .python-version  .travis.yml  AUTHORS.md  HISTORY.md  LICENSE  MANIFEST.in  Makefile  README.md  flake.nix  mypy.ini  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py  tox.ini
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: python-package.yml  python-publish.yml
docs/: conf.py  fastcli.rst  index.rst  modules.rst
fastcli/: __init__.py  fastcli.py
src/fastcli/: __main__.py
tests/: test_fastcli.py
