[build-system]
requires = ["setuptools>65", "setuptools_scm[toml]>=7"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 79
target_version = ['py312']

[tool.isort]
profile = "black"
multi_line_output = 3
order_by_type = false
line_length = 79

[tool.setuptools]
zip-safe = false

[tool.setuptools.dynamic]
version = {attr = "fastcli.__version__"}
readme = {file = ["README.md", "CHANGELOG.md"], content-type = "text/markdown"}

[tool.mypy]
check_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
follow_imports = "silent"
ignore_missing_imports = true
python_version = "3.12"
show_column_numbers = true
warn_incomplete_stub = false
warn_redundant_casts = true
warn_unused_ignores = true

[project]
name = "fastcli"
urls = {homepage = "https://github.com/n8henrie/fastcli"}
dynamic = ["version", "readme"]
license = { text = "MIT" }
description = "Python3 CLI script for fast.com"
authors = [ {name = "Nathan Henrie", email = "nate@n8henrie.com"} ]
keywords = ["fastcli"]
classifiers= [
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "aiohttp>=3.7.4,<4"
]

[project.optional-dependencies]
dev = [
    "black",
    "build",
    "flake8",
    "mypy",
    "pytest",
    "recommonmark",
    "sphinx",
    "sphinx-rtd-theme",
    "tox",
    "twine",
]
